DO328/solutions/comprehensive-review/frontend-service-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
    version: v2
  name: frontend-v2
spec:
  selector:
    matchLabels:
      app: frontend
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: frontend-v2
          image: quay.io/redhattraining/ossm-adopt-a-pup-webapp:2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
