DO328/solutions/comprehensive-review/adoption-vs-v2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: adoption-vs
  namespace: adoptapup
spec:
  gateways:
  - adoptapup-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /adoption
    route:
    - destination:
        host: adoption
        port:
          number: 8080
    retries:
      attempts: 3
      perTryTimeout: 5s
      retryOn: 5xx
