DO328/solutions/comprehensive-review/animal-dest-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: animal-dr
spec:
  host: animal
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
